--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
 
             <div class="elements">
+                <i class="fa-solid fa-moon"></i>
                 <a href="#">Home</a>
                 <a href="#">Compare</a>
                 <a href="#">Watchlist</a>
